Extended link validation method in order to support links containing special or encoded characters.